--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 .stopwatch {
     text-align: center;
     margin-top: 20px;
-    background: white;
+    background: rgba(255, 255, 255, 0.41);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
